src/test/deca/context/valid/124_classeCompare.deca
// Description:
//    Programme minimaliste: une classe et des Cast dans le Main.
//
// Résultats:
//	Classes differentes
//
// Historique:
//    cree le 01/01/2022

class A { }
class B extends A { }
{
   A a = new A();
   B b = new B();
   if (a != b) {
        println("Classes differentes");
   }
}
